# RobotProject

./: .gitignore  PROJECT.md  README.md  main.py
ros2_ws/src/digital_twin/: burger_real.yaml  burger_sim.yaml  package.xml  setup.py
ros2_ws/src/digital_twin/digital_twin/: frontier_explorer.py
ros2_ws/src/digital_twin/launch/: nav2_real.launch.py  nav2_sim.launch.py
scripts/: run_exploration.sh
static/: index.html
